k8s/dev-v1.16.3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: grpc
    alb.ingress.kubernetes.io/healthcheck-port: '6334'
    alb.ingress.kubernetes.io/healthcheck-protocol: TCP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  labels:
    ingress-controller: alb
  name: qdrant-ingress
  namespace: dev-ns
spec:
  ingressClassName: alb
  rules:
    - host: qdrant.dev.atominnolab.com
      http:
        paths:
          - backend:
              service:
                name: qdrant-v1-16-3-headless
                port:
                  number: 6334
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qdrant.dev.atominnolab.com
      secretName: ssl-dev.atominnotab.com
